@@ -26,6 +26,7 @@
 import sys
 import os
 import locale
+import const
 import signal
 import gettext
 import exceptions
@@ -144,23 +145,23 @@ def setup_logging():
 def run():
 
     setup_logging()
-    
-    try:        
+
+    try:
         import gnome
-        self.program = gnome.program_init('gramps',const.version, 
-                                          gnome.libgnome_module_info_get(),
-                                          args, const.popt_table)
-        
-        self.program.set_property('app-libdir',
-                                  '%s/lib' % const.prefixdir)
-        self.program.set_property('app-datadir',
-                                  '%s/share/gramps' % const.prefixdir)
-        self.program.set_property('app-sysconfdir',
-                                  '%s/etc' % const.prefixdir)
-        self.program.set_property('app-prefix', const.prefixdir)
+        program = gnome.program_init('gramps',const.version, 
+                                     gnome.libgnome_module_info_get(),
+                                     args, const.popt_table)
+    
+        program.set_property('app-libdir',
+                             '%s/lib' % const.prefixdir)
+        program.set_property('app-datadir',
+                             '%s/share/gramps' % const.prefixdir)
+        program.set_property('app-sysconfdir',
+                             '%s/etc' % const.prefixdir)
+        program.set_property('app-prefix', const.prefixdir)
     except:
         pass
-
+    
     try:        
         import StartupDialog
         
